# rust-basic-api

./: .dockerignore  .env.example  .env.example.bak  .env.test  .env.test.example  .gitignore  .gitleaksignore  .push-bypass  AGENTS.md  CIPHER_COMPLETION_SUMMARY.md  CIPHER_SECURITY_AUDIT.md  CIPHER_TASK1_SECURITY_VERIFICATION_COMPLETE.md  CLAUDE.md  CLEO_EXECUTION_COMPLETE.md  CLEO_FINAL_VERIFICATION.md  CLEO_ITERATION3_COMPLETE.md  CLEO_QUALITY_AUDIT_COMPLETE.md  CLEO_QUALITY_AUDIT_FINAL.md  CLEO_QUALITY_AUDIT_ITERATION_4_COMPLETE.md  CLEO_QUALITY_CERTIFICATION.md  CLEO_TASK2_QUALITY_AUDIT.md  CLEO_TASK5_QUALITY_AUDIT_COMPLETE.md  CLEO_TASK5_QUALITY_AUDIT_ITERATION2_COMPLETE.md  CLEO_TASK5_QUALITY_AUDIT_ITERATION3_COMPLETE.md  CLEO_TASK6_COMPLETION_SUMMARY.md  CLEO_TASK6_EXECUTION_COMPLETE.md  CLEO_TASK6_EXECUTION_SUMMARY.md  CLEO_TASK6_FINAL_AUDIT_REPORT.md  CLEO_TASK6_FINAL_QUALITY_AUDIT.md  CLEO_TASK6_FINAL_QUALITY_CERTIFICATION.md  CLEO_TASK6_FINAL_SUMMARY.md  CLEO_TASK6_ITERATION2_COMPLETE.md  CLEO_TASK6_ITERATION3_AUDIT_COMPLETE.md  CLEO_TASK6_ITERATION3_COMPLETE.md  CLEO_TASK6_QUALITY_AUDIT_COMPLETE.md  CLEO_TASK6_QUALITY_AUDIT_COMPLETE_FINAL.md  CLEO_TASK6_QUALITY_AUDIT_FINAL.md  CLEO_TASK6_QUALITY_AUDIT_FINAL_COMPLETE.md  CLEO_TASK6_QUALITY_AUDIT_FINAL_REPORT.md  CLEO_TASK6_QUALITY_AUDIT_FINAL_SUMMARY.md  (+61 more)
.github/workflows/: ci.yml  deploy.yml  docker.yml
docs/: requirements.yaml  task-1-implementation-summary.md  task-1-plan.md
docs/.taskmaster/docs/task-1/: acceptance-criteria.md  prompt.md  task.md  task.xml
k8s/: deployment.yaml  secret.yaml.template  service.yaml
migrations/: 001_initial_schema.sql  20241014000001_initial_schema.sql  20241024000001_initial_schema.sql  20251027000001_initial_schema.sql
rust-basic-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
rust-basic-api/src/: app_state.rs  config.rs  error.rs  main.rs  test_support.rs
rust-basic-api/src/models/: mod.rs
rust-basic-api/src/repository/: mod.rs
rust-basic-api/src/routes/: health.rs  mod.rs
scripts/: build_image.sh  deploy_k8s.sh  run_tests.sh  setup_test_db.sh
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/models/: mod.rs  user.rs  validation.rs
src/repository/: mod.rs  test_utils.rs  user_repository.rs
src/routes/: health.rs  mod.rs  user_routes.rs
task/: acceptance-criteria.md  architecture.md  cleo-final-quality-audit.md  cleo-handoff-to-tess.md  cleo-quality-audit.md  implementation-summary.md  notes.md  plan.md  rex-handoff.md  summary.md  task-1-plan.md  task.md  task.xml
tests/: app_startup_tests.rs  config_test.rs  config_unit_test.rs  database_integration.rs  error_test.rs  health_endpoint_test.rs  integration_test.rs  repository_tests.rs  routes_test.rs
(+28 files in other folders)
