[package]
name = "rust-basic-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.6", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
