[package]
name = "rust-basic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use sqlx-core + sqlx-postgres to avoid pulling MySQL (rsa vuln)
sqlx = { package = "sqlx-core", version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "json", "migrate"] }
sqlx-postgres = { version = "0.8", features = ["chrono", "json", "migrate"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
