[package]
name = "rust-basic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["macros", "tokio"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json"
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "tcp"] }
tower = { version = "0.4", features = ["util"] }
serial_test = "2"
